# programming

./: ex  ex.cpp
C++/: datatypes  datatypes.cpp
C++/exercise_1/: business  circle  circle.cpp  distance  distance.cpp  equations  equations.cpp  geometry.cpp  simplemath  simplemath.cpp  simulation.cpp  trigonometry
C++/sem1+2/exercise_1/: addition.cpp  business.cpp  geometry  hw10_grader.py  imperial_units.cpp  trigonometry.cpp
C++/sem3/: get_with_callback.c  result.html
C++/sem3+4/: get_request  get_with_callback  linked_list.c  sum_to  sum_to.c
C++/sem3+4/OOP/: basicstruct  basicstruct.cpp
C/Zingerle/: TPalindrom.cpp  structUE1
C/allgemein/: semaphore_bsp.c
Cing/: README.md
Cing/Santa/DynamicMemoryManagement/c_free_store/: CMakeLists.txt  create_arrays.h  create_arrays_test.c
Cing/Zingerle/: 2sem_1stEX_solution.c  Array2dim1x1.cpp  Array3dim.cpp  Tarray.cpp  Tratespiel.cpp  exercise.cpp  pointeruebung.cpp
Cing/allgemein/: semaphore.c
SYP/redis_client/: index.js
SYP/webserver/: package.json
c++/sem1+2/: datatypes
c++/sem3/: get_request.c  linked_list
c/Santa/multipleFiles/: CMakeLists.txt  circuit.h  interface.c  interface.h  inventory.h
c/Zingerle/: Tarray.py  TmittleresWort.cpp  structU1.cpp
exercise/cosmic-cycle/: package.json
java/demo/: pom.xml
lab10/scrimba-react/: package-lock.json  package.json
lab10/tenzies_game/: package-lock.json  package.json
syp/game/: getAllObjects.js  index.js  package.json  promise3.js  promises.js  promises2.js  setIntervalWithParams.js  syncSample.js
syp/redis_client/: package.json
(+512 files in other folders)
